--- a/css/register.css
+++ b/css/register.css
@@ -50,6 +50,21 @@ div#wrap form input[type="submit"] {
     border-radius: 10px;
 }
 
+div#wrap section#teacher_register {
+    margin-top: 40px;
+}
+
+div#wrap section#teacher_register a {
+    background-color: white;
+    width: 31%;
+    padding: 15px;
+    color: #3b80f7;
+    border: 0;
+    margin-top: 30px;
+    font-size: 15px;
+    border-radius: 10px;
+}
+
 @media (max-width: 768px) {
     div#wrap form section input[type="number"], input[type="password"], input[type="text"] {
         width: 80%;
